--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-node_modules/**
-dist/**
-.env
-.DS_Store
-.vscode/**
-.idea/**
+**/node_modules/
+**/dist/
+**/.env
+**/.DS_Store
+**/.vscode/
+**/.idea/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
